--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
 
     <modules>
         <module>cloud-provider-payment8001</module>
+        <module>cloud-comsumer-order80</module>
+        <module>cloud-api-commons</module>
+
     </modules>
 
 
