--- a/cloud-api-commons/pom.xml
+++ b/cloud-api-commons/pom.xml
@@ -23,6 +23,8 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!--后面要用的-->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
