负载均衡ribbon和openfeign 断路器hystrix和豪猪监控

--- a/cloud-comsumer-order80/pom.xml
+++ b/cloud-comsumer-order80/pom.xml
@@ -52,7 +52,7 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <!--引入eureka客户端  2.x版本使用新的依赖  -->
+        <!--引入eureka客户端  2.x版本使用新的依赖 里面有ribbon  -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
