zipkin链路监控，Alibaba-nacos(注册中心+配置中心+负载均衡)

--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
 
+        <!--链路监控zipkin-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <!--自己的api -->
         <dependency>
             <groupId>com.jyl</groupId>
