--- a/cloud-comsumer-order80/pom.xml
+++ b/cloud-comsumer-order80/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>cloud-comsumer-order80</artifactId>
 
     <dependencies>
+        <!--链路监控zipkin-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <!--自己的api -->
         <dependency>
             <groupId>com.jyl</groupId>
